# Misc

./: CONTRIBUTING.md  README.md  changelog.md  deploy.md  punchlist.md  release.md  taskchain.md
.github/workflows/: documentation-candidate.yml  pages.yml  phantomblock-ci.yml
phantomblock/: README.md  mkdocs.yml  pyproject.toml
phantomblock/compliance/: README.md  control-mapping.yml
phantomblock/config/: known_good.example.yml
phantomblock/docs/: architecture.md  compliance.md  component-overlap-inventory-v1.json  component-overlap-inventory.md  deployment.md  design-contracts.md  developer-guide.md  developer-onboarding.md  extensions.md  file-disposition-manifest-v1.json  file-disposition-manifest.md  host-observation-overlap.md  incubation-exit-and-migration.md  incubation-status.md  index.md  obstruction-and-gluing.md  onboarding.md  ownership-and-release.md  portable-host-observation.md  purpose.md  repository-boundaries.md  threat-model.md  validation.md
phantomblock/image/: build.sh  mkosi.conf
phantomblock/packaging/: build-binary.sh  phantomblock.spec
phantomblock/src/phantomblock/: __init__.py  cli.py  core.py  dashboard.py  extensions.py  isolation.py  policy.py
phantomblock/tests/: test_core.py
scripts/: check_documentation_candidate.py
tests/: test_documentation_candidate.py
