[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantomblock"
version = "0.1.0"
description = "Defensive firmware and hardware integrity assessment MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
  "scapy>=2.5,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.6,<1"]

[project.scripts]
phantomblock = "phantomblock.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
