[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantomblock"
version = "0.2.0"
description = "Defensive firmware and hardware integrity assessment platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
  "scapy>=2.5,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.6,<1"]
build = ["pyinstaller>=6.10,<7", "cyclonedx-bom>=5,<7"]

[project.scripts]
phantomblock = "phantomblock.cli:main"

[project.entry-points."phantomblock.capabilities"]
# Third-party passive extensions register here as name = "package.module:Factory".

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
